# TrajectoLab_radau

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docs_setup.py  hypersensitive.py  hypersensitive_direct.py  jit_tmp.c  lint.bat  phs_adaptive.py  pyproject.toml  rpm_basis.py  rpm_solver.py  setup.py  sim.py  solution_processor.py  sumlist.py  test_refactoring.py
.github/workflows/: docs.yml
benchmark/: benchmark.py  diagnostic.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  generate_api_docs.py  generate_examples_docs.py  index.rst  installation.rst  quickstart.rst
examples/: alp_rider.py  arc.py  benchmark.py  benchmark_hypersensitive.py  benchmark_robot_arm.py  birkhoff_example.py  block.py  car.py  car_col.py  crane.py  explicit.py  hiv.py  hypersensitive.py  hypersensitive_auto.py  hypersensitive_multiphase.py  hypersensitive_scale.py  minimal_debug_test.py  multi.py  plane_change.py  reorientation_single.py  scaling_example.py  schwartz.py  shuttle.py  shuttle_auto.py  shuttle_manual.py  shuttle_scale.py  shuttle_simple.py  simple_scaling_test.py  tangent.py  test.py  test_parameter.py  test_scale.py  testing.py  ultra_minimal_test.py
examples/acrobot/: acrobot.py  acrobot_animate.py
examples/aero-assisted_plane_change/: README.md  aero-assisted_plane_change.py  plane_change.py
examples/alp_rider/: README.md  alp_rider.py
examples/attitude/: README.md  attitude.py
examples/brachistochrone/: README.md  brachistochrone.py
examples/car_drift/: car_drift.py  car_drift_animate.py
examples/car_dynamic_obstacle/: car_dynamic_obstacle.py
examples/cartpole/: README.md  cartpole.py  cartpole_dynamics.py
examples/cartpole_swingup/: cartpole_swingup.py  cartpole_swingup_animate.py  cartpole_swingup_dynamics.py
examples/container_crane/: README.md  container_crane.py  crane.py
examples/drone/: drone.py  drone_animate.py
examples/dynamic_obstacle_avoidance/: README.md  dynamic_obstacle_avoidance.py  dynamic_obstacle_avoidance_animate.py
examples/hang_glider/: README.md  hang_glider.py
examples/highway_overtaking/: highway_overtaking.py  highway_overtaking_animate.py
examples/hypersensitive/: README.md  hypersensitive.py  multi_hypersensitive.py
examples/low_thrust_orbit_transfer/: README.md  low_thrust_orbit_transfer.py  low_thrust_orbit_transfer_animate.py
examples/lqr/: README.md  lqr.py
examples/manipulator_2dof/: manipulator_2dof.py  manipulator_2dof_animate.py  manipulator_2dof_dynamics.py
examples/manipulator_3dof/: README.md  manipulator_3dof.py  manipulator_3dof_animate.py  manipulator_3dof_dynamics.py
examples/multiphase_vehicle_launch/: README.md  multiphase_vehicle_launch.py
examples/orbit/: orbit.py
examples/overtaking_maneuver/: README.md  overtaking_maneuver.py  overtaking_maneuver_animate.py
examples/quadcopter/: README.md  quadcopter.py  quadcopter_animate.py
examples/race_car/: car.py  race_car.py
examples/robot_arm/: robot_arm.py
examples/shuttle_reentry/: shuttle.py  shuttle_reentry.py
examples/two-strain_tuberculosis_model/: README.md  tuberculosis.py  two-strain_tuberculosis_model.py
examples/two_phase_robot/: README.md  two_phase_robot.py
examples/two_phase_schwartz/: schwartz.py  solution_access.py  two_phase_schwartz.py
examples/underwater_vehicle/: under_colloc.py  underwater_vehicle.py
maptor/: __init__.py  birkhoff.py  input_validation.py  iteration_solution.py  mtor_types.py  plot.py  radau.py  solution.py  solution_extraction.py  solver.py  summary.py  summary_benchmark.py  tl_types.py
maptor/birkhoff_solver/: __init__.py  constraints_birkhoff_solver.py  core_birkhoff_solver.py  initial_guess_birkhoff_solver.py  integrals_birkhoff_solver.py  types_birkhoff_solver.py  variables_birkhoff_solver.py
maptor/direct_solver/: __init__.py  constraints_solver.py  core_solver.py  initial_guess_solver.py  integrals_solver.py  types_solver.py  variables_solver.py
maptor/mechanics/: __init__.py  example_usage_1.py  example_usage_2.py  symbolic.py
maptor/problem/: __init__.py  constraints_problem.py  core_problem.py  initial_guess_problem.py  mesh.py  solver_interface.py  state.py  variables_problem.py
maptor/robotics/: oscillator.py  symbolic.py
maptor/utils/: constants.py  coordinates.py  expression_cache.py  precision.py
scaling_logs/: scaling_verification_results_20250521_093442.txt  scaling_verification_results_20250521_093939.txt
tests/: benchmark.py  test_adaptive_benchmark.py  test_adaptive_mathematical_correctness.py  test_adaptive_system_validation.py  test_birkhoff.py  test_boundary_api_changes.py  test_constraint_safety.py  test_core_solver_integration.py  test_problem_constraint.py  test_problem_core.py  test_problem_setup_order_independence.py  test_radau_mathematical_correctness.py  test_scale.py  test_solver_execution.py  test_solver_setup.py
trajectolab/: __init__.py  constraint_utils.py  direct_solver.py  exceptions.py  input_validation.py  plot.py  problem.py  radau.py  scaling.py  solution.py  solution_extraction.py  solution_extraction_multi_phase.py  solution_multi_phase.py  solver.py  solver_multi_phase.py  summary.py  tl_types.py  trajectolab_types.py  utils.py
trajectolab/adaptive/: __init__.py  base.py  phs.py
trajectolab/core/: __init__.py  basis.py  problem.py  solver.py
trajectolab/direct_solver/: __init__.py  constraints_solver.py  core.py  core_solver.py  initial_guess.py  initial_guess_solver.py  integrals.py  integrals_solver.py  multi_phase_constraints_solver.py  multi_phase_core_solver.py  multi_phase_variables_solver.py  types.py  types_solver.py  variables.py  variables_solver.py
trajectolab/problem/: __init__.py  casadi_build.py  constraints.py  constraints_problem.py  core.py  core_problem.py  guess_manager.py  initial_guess.py  initial_guess_problem.py  mesh.py  multi_phase_problem.py  multi_phase_state.py  scaling.py  solver_interface.py  state.py  variables.py  variables_problem.py
trajectolab/scaling/: __init__.py  core_scale.py
trajectolab/utils/: __init__.py  casadi_utils.py  constants.py  (+6 more)
(+72 files in other folders)
