[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectolab"
version = "0.1.0"
description = "Optimal control framework using Radau Pseudospectral Method"
authors = [{name = "TrajectoLab Authors"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["optimal control", "trajectory optimization", "collocation", "pseudospectral methods"]
dependencies = [
    "numpy>=1.18.0",
    "matplotlib>=3.1.0",
    "scipy>=1.4.0",
    "casadi>=3.5.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.263",
    "mypy>=1.3.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv", "__pycache__", "build", "dist"]
skip_gitignore = true
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
# Core type checking
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Scientific computing accommodations
disallow_untyped_defs = false  # Allow untyped functions for gradual adoption
check_untyped_defs = true  # Still type check the bodies of untyped functions
disallow_any_generics = false  # Needed for numpy compatibility
disallow_subclassing_any = false  # Needed for scientific libraries

# Numerical safety features
strict_optional = true  # Catch None-related errors (critical for scientific code)
no_implicit_optional = true  # No implicit Optional in unions

# Library handling
ignore_missing_imports = true  # Ignore missing stubs for scientific libraries
follow_imports = "silent"  # Don't complain about followed imports

# Project organization
exclude = [".venv", "venv", "build", "dist", "__pycache__"]

# Per-module configuration for incremental typing
[[tool.mypy.overrides]]
module = ["trajectolab.utils", "trajectolab.radau"]  # Core numerical modules
disallow_untyped_defs = true  # Enforce full typing in core modules
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "trajectolab.adaptive.*"  # Complex algorithmic code
disallow_untyped_defs = false  # More flexibility in complex adaptive code
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes errors
    "B",  # flake8-bugbear rules
    "I",  # isort rules
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "N",  # pep8-naming
]
lint.ignore = [
    "E501",  # Line too long (handled by black)
    "C901",
    "N803",
    "N806",
    "N815"
]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint]
max-line-length = 100
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "C0303", "C0330", "C0326", "W0311",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "z", "t", "df", "ax", "f"]
ignore = ["CVS", ".venv", "venv"]
ignore-patterns = [".*\\.venv.*"]
